--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
     "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
+    "lerna": "^6.0.1",
     "metro-react-native-babel-preset": "0.72.3",
     "react-test-renderer": "18.1.0"
   },
   "jest": {
     "preset": "react-native"
-  }
+  },
+  "workspaces": [
+    "packages/*"
+  ]
 }
