--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
+    "graph": "npx nx graph",
+    "build:modules": "npx lerna run build",
     "test": "jest",
     "lint": "eslint ."
   },
   "dependencies": {
+    "@rn-module/design": "*",
     "react": "18.1.0",
     "react-native": "0.70.4"
   },
@@ -17,6 +20,7 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@svgr/cli": "^6.5.1",
     "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
