--- a/packages/Design/package.json
+++ b/packages/Design/package.json
@@ -2,9 +2,10 @@
   "name": "@rn-module/design",
   "version": "1.0.0",
   "description": "Design Module",
-  "main": "dist/index.js",
+  "main": "dist/src/index.js",
   "scripts": {
-    "build": "rimraf dist && mkdir dist && cp index.js dist && cp -R components dist"
+    "build": "yarn clean && tsc --pretty",
+    "clean": "rimraf dist"
   },
   "keywords": [],
   "author": "",
@@ -15,5 +16,9 @@
   },
   "dependencies": {
     "axios": "^1.1.3"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.25",
+    "@types/react-native": "^0.70.6"
   }
 }
