--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,6 +17,7 @@
     "paths": {
       "@@monorepo/mobile-library": ["libs/mobile-library/src/index.ts"],
       "@@monorepo/web-library": ["libs/web-library/src/index.ts"],
+      "@monorepo/mobile-ui": ["libs/mobile-ui/src/index.ts"],
       "@monorepo/models": ["libs/models/src/index.ts"]
     }
   },
