--- a/packages/UI/package.json
+++ b/packages/UI/package.json
@@ -5,7 +5,7 @@
   "main": "dist/src/index.js",
   "typings": "dist/src/index.d.ts",
   "scripts": {
-    "build": "yarn clean && tsc --pretty",
+    "build": "tsc --pretty",
     "build:w": "yarn clean && tsc -w",
     "clean": "rimraf dist"
   },
